feat: deck endpoints
