# src/api/types.ts
@@ -1,5 +1,9 @@
 import { components } from './schema';
 
+export type Credentials = components['schemas']['Credentials'];
+
+export type AuthResponse = components['schemas']['AuthResponse'];
+
 export type User = components['schemas']['User'];
 
 export type Role = components['schemas']['Role'];
